--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/redux-logger": "^3.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "typescript": "~4.1.5"
   },
   "scripts": {
